fix: full screen layout styles on safari

--- a/app/demo.scss
+++ b/app/demo.scss
@@ -28,6 +28,7 @@
 }
 
 .demo-full-screen__wrapper {
+  width: 50px;
   height: 50px;
 }
 
